fix: backtracking